# Xul

./: .gitignore  .hgignore  .hgtags  .readthedocs.yaml  Dockerfile  LICENSE.txt  README.md  README.rst  docker-compose.yml  fabfile.py  prettyprint.py  pyproject.toml  setup.cfg  setup.py  test.sh  transform.py  validate.py  xpath.py
.github/workflows/: code-checks.yml  publish-to-pypi.yml  python-package.yml
Sphinx/: index.rst  make.bat  ppx.rst  transform.rst  validate.rst  xp.rst
docs/: Makefile  changelog.rst  conf.py  index.rst  ppx.rst  requirements.txt  transform.rst  validate.rst  xml_source.rst  xp.rst
docs/_static/: custom.css
src/xul/: __init__.py  etree.py  log.py  ppxml.py  utils.py  validate.py  xpath.py  xsl.py
src/xul/cmd/: __init__.py  ppx.py  transform.py  validate.py  xp.py
xul/: __init__.py  dom.py  etree.py  log.py  ppxml.py  validate.py  xpath.py  xsl.py
xul/cmd/: ppx.py  prettyprint.py  transform.py  validate.py  xp.py
