[project]
name = "Xul"
description = "XML (XPath, XSD, XSLT) Utilities"
readme = "README.rst"
authors = [
    { name = "Peter Adrichem", email = "Peter.Adrichem@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "lxml>=4.0"
]
keywords = [ "xml", "xpath", "xslt", "xsd", "dtd", "xml schema", "relax ng", "rng" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities"
]
license = { text = "MIT" }
dynamic = [ "version" ]

[project.optional-dependencies]
docs = [
    "furo==2024.8.6",
    "Sphinx~=8.1.3"
]
test = [
    "black~=24.10",
    "isort~=5.13.2",
    "lxml-stubs~=0.5.1",
    "mypy~=1.14.1",
    "ruff~=0.9.3",
    "types-Pygments~=2.19",
]
syntax = [
    "Pygments>=2.7"
]

[project.urls]
Homepage = "https://xul.readthedocs.io/"
Documentation = "https://xul.readthedocs.io/en/stable/"
Changelog = "https://xul.readthedocs.io/en/latest/changelog.html"
Source = "https://github.com/peteradrichem/Xul"

[project.entry-points.console_scripts]
transform = "xul.cmd.transform:main"
ppx = "xul.cmd.ppx:main"
xp = "xul.cmd.xp:main"
validate = "xul.cmd.validate:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "xul.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xul = [
    "py.typed"
]

[tool.black]
color = true
line-length = 100
verbose = true

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
cache_dir = "/tmp/.mypy_cache"
exclude = ["^docs/", "^build/"]
pretty = true

[tool.ruff]
cache-dir = "/tmp/.ruff_cache"
exclude =  ["build/"]
include = ["pyproject.toml", "*.py"]
line-length = 100

[tool.ruff.lint]
# On top of the default `select` (`E`, `F`), pycodestyle errors and Pyflakes.
extend-select = [
  "D",   # pydocstyle
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "D105",       # Missing docstring in magic method
  "D107",       # Missing docstring in `__init__`
  "D203",       # 1 blank line required before class docstring
  "D213",       # Multi-line docstring summary should start at the second line
]
pydocstyle.convention = "pep257"
