[bdist_wheel]
universal = 1

[metadata]
name = Xul
version = attr: xul.__version__

author = Peter Adrichem
author_email = Peter.Adrichem@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Text Processing :: Markup :: XML
    Topic :: Utilities

description = XML (XPath, XSD, XSLT) Utilities
keywords = xml, xpath, xslt, xsd, dtd, xml schema, relax ng, rng
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = CPython
license = MIT
license_files = LICENSE.txt
url = https://xul.readthedocs.io
project_urls =
    Documentation = https://xul.readthedocs.io
    Source = https://github.com/peteradrichem/Xul
    Changelog = https://xul.readthedocs.io/en/latest/changelog.html

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires = lxml>=2.0

[options.entry_points]
console_scripts =
    transform = xul.cmd.transform:main
    ppx = xul.cmd.ppx:main
    xp = xul.cmd.xp:main
    validate = xul.cmd.validate:main

[options.extras_require]
syntax = Pygments>=2.0
